syntax = "proto3";



package common.data;

import "common/data/core.proto";

option go_package = "github.com/sonr-io/core/common/data";

enum Direction {
  DIRECTION_UNSPECIFIED = 0;
  DIRECTION_INCOMING = 1;
  DIRECTION_OUTGOING = 2;
}

// For Transfer File Payload
message FileItem {
  common.data.MIME mime = 1; // Standard Mime Type
  string name = 2;         // File Name without Path
  string path = 3;         // File Location
  int64 size = 4;          // File Size in Bytes
  Thumbnail thumbnail = 5; // Thumbnail of File
  int64 last_modified = 6;  // Last Modified Time in Seconds
}

// For Transfer Text Payload
message MessageItem {
  common.data.MIME mime = 1;           // Standard Mime Type
  string subject = 2;                // Subject of Message
  string body = 3;                   // Body of Message
  int64 created_at = 4;               // Created Time in Seconds
  repeated FileItem attachments = 5; // Attachments of Message
}

// Sonr Url Link Contains metadata of provided URL
message UrlItem {
  common.data.MIME mime = 1; // Standard Mime Type
  string link = 2;         // OG URL Link
  string title = 3;        // Meta Field for Title
  string site = 4;         // Meta field for site
  string site_name = 5;     // Meta field for sitename
  string description = 6;  // Meta field for description
  OpenGraph open_graph = 7; // OpenGraph Object
}

// OpenGraph is a generic OpenGraph object
message OpenGraph {
  Primary primary = 1;       // Primary OpenGraph Object
  repeated Image images = 2; // Images
  repeated Video videos = 3; // Videos
  repeated Audio audios = 4; // Audios
  Twitter twitter = 5;       // Twitter Card

  // Primary Opengraph Preview
  message Primary {
    Type type = 1; // Type of Primary
    oneof data {
      Image image = 2;     // Image
      Video video = 3;     // Video
      Audio audio = 4;     // Audio
      Twitter twitter = 5; // Twitter Card
    }
  }

  // OpenGraph Image
  message Image {
    string url = 1;       // `meta:"og:image,og:image:url"`
    string secure_url = 2; // `meta:"og:image:secure_url"`
    int32 width = 3;      // `meta:"og:image:width"`
    int32 height = 4;     // `meta:"og:image:height"`
    string type = 5;      // `meta:"og:image:type"`
  }

  // OpenGraph Video
  message Video {
    string url = 1;       // `meta:"og:video,og:video:url"`
    string secure_url = 2; // `meta:"og:video:secure_url"`
    int32 width = 3;      // `meta:"og:video:width"`
    int32 height = 4;     // `meta:"og:video:height"`
    string type = 5;      // `meta:"og:video:type"`
  }

  // OpenGraph Audio
  message Audio {
    string url = 1;       // `meta:"og:audio,og:audio:url"`
    string secure_url = 2; // `meta:"og:audio:secure_url"`
    string type = 3;      // `meta:"og:audio:type"`
  }

  // Twitter Card
  message Twitter {
    string card = 1;            // `meta:"twitter:card"`
    string site = 2;            // `meta:"twitter:site"`
    string site_id = 3;          // `meta:"twitter:site:id"`
    string creator = 4;         // `meta:"twitter:creator"`
    string creator_id = 5;       // `meta:"twitter:creator:id"`
    string description = 6;     // `meta:"twitter:description"`
    string title = 7;           // `meta:"twitter:title"`
    string image = 8;           // `meta:"twitter:image,twitter:image:src"`
    string image_alt = 9;        // `meta:"twitter:image:alt"`
    string url = 10;            // `meta:"twitter:url"`
    Player player = 11;         // Twitter Item Player
    IPhone iphone = 12;         // Twitter iPhone Data
    IPad ipad = 13;             // Twitter iPad Data
    GooglePlay google_play = 14; // Twitter Android Data

    message Player {
      string url = 1;    // `meta:"twitter:player"`
      int32 width = 2;   // `meta:"twitter:width"`
      int32 height = 3;  // `meta:"twitter:height"`
      string stream = 4; // `meta:"twitter:stream"`
    }

    message IPhone {
      string name = 1; // `meta:"twitter:app:name:iphone"`
      string id = 2;   // `meta:"twitter:app:id:iphone"`
      string url = 3;  // `meta:"twitter:app:url:iphone"`
    }

    message IPad {
      string name = 1; // `meta:"twitter:app:name:ipad"`
      string id = 2;   // `meta:"twitter:app:id:ipad"`
      string url = 3;  // `meta:"twitter:app:url:ipad"`
    }

    message GooglePlay {
      string name = 1; // `meta:"twitter:app:name:googleplay"`
      string id = 2;   // `meta:"twitter:app:id:googleplay"`
      string url = 3;  // `meta:"twitter:app:url:googleplay"`
    }
  }

  // Url Opengraph Preview Type - In order of Priority
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_IMAGE = 1;   // Image Preview
    TYPE_VIDEO = 2;   // Video Preview
    TYPE_TWITTER = 3; // Twitter Card Preview
    TYPE_AUDIO = 4;   // Audio Preview
    TYPE_NONE = 5;    // No Type, Preview not set.
  }
}

// Thumbnail of File
message Thumbnail {
  bytes buffer = 1; // Thumbnail Buffer
  MIME mime = 2;    // Mime Type
}

// Payload is Data thats being Passed
message Payload {
  repeated Item items = 1; // Payload Items
  Profile owner = 2;       // PROFILE: General Sender Info
  int64 size = 3;          // Payload Size in Bytes
  int64 created_at = 4;     // Payload Creation Time in Seconds

  // Item in Payload
  message Item {
    MIME mime = 1;  // MIME of the Item
    int64 size = 2; // Size of the Item in Bytes

    // Attached Data
    oneof data {
      FileItem file = 3;       // FILE: File Item
      UrlItem url = 4;         // URL: Url Item
      MessageItem message = 5; // MESSAGE: Message Item
    }

    // Thumbnail of the Item
    oneof preview {
      Thumbnail thumbnail = 6;         // Thumbnail of the Item
      OpenGraph.Primary open_graph = 7; // Open Graph Image
    }
  }
}

// PayloadItemList is a list of Payload.Item's for Persistent Store
message PayloadList {
  repeated Payload payloads = 1; // Payload List
  string key = 2;                // Key of the Payload List
  int64 last_modified = 3;          // Last Modified Time in Seconds
}

// SupplyItem is an item supplied to be a payload
message SupplyItem {
    string path = 1; // Supply Path
    optional bytes thumbnail = 2; // Supply Path of the Thumbnail
}
